--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.7.2
 astroid==2.15.5
 autopep8==2.0.2
+beautifulsoup4==4.12.2
 dill==0.3.6
-Django==4.2.2
+Django==4.2.3
+django-bootstrap-v5==1.0.11
+django-guardian==2.4.0
 isort==5.12.0
 lazy-object-proxy==1.9.0
 mccabe==0.7.0
@@ -11,6 +14,7 @@ platformdirs==3.6.0
 psycopg2==2.9.6
 pycodestyle==2.10.0
 pylint==2.17.4
+soupsieve==2.4.1
 sqlparse==0.4.4
 tomli==2.0.1
 tomlkit==0.11.8
