--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,11 @@ dill==0.3.6
 Django==4.2.3
 django-bootstrap-v5==1.0.11
 django-guardian==2.4.0
+gunicorn==21.2.0
 isort==5.12.0
 lazy-object-proxy==1.9.0
 mccabe==0.7.0
+packaging==23.1
 pep8==1.7.1
 platformdirs==3.6.0
 psycopg2==2.9.6
